# agentic-retail-analysis

./: LICENSE  README.md  pyproject.toml
src/agentic_retail/adapters/: __init__.py  base.py  walmart.py
src/agentic_retail/agents/: __init__.py  router.py
src/agentic_retail/api/: cli.py
src/agentic_retail/ingest/: __init__.py  loader.py
src/agentic_retail/schema/: __init__.py  canonical.py
src/agentic_retail/tools/: __init__.py  base.py
src/agentic_retail/tools/descriptive/: summary.py  timeseries.py
src/agentic_retail/tools/diagnostic/: correlation.py
src/agentic_retail/tools/predictive/: sales_model.py
src/agentic_retail/tools/prescriptive/: whatif.py
