[project]
name = "agentic-retail"
version = "0.0.1"
description = "Agentic analysis over arbitrary retail sales datasets"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pandera>=0.20",
    "pyarrow>=16",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
retail = "agentic_retail.api.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
